fixed headings alignment

--- a/static/sass/quarks/_figures.scss
+++ b/static/sass/quarks/_figures.scss
@@ -23,6 +23,8 @@ figcaption {
     h4 {
         margin: 0;
         color: $color__offblack;
+        border-bottom: none;
+        padding-bottom: 0;
     }
 
     p {
